# Welle

./: CMakeLists.txt  LICENSE  README.md
medialib/: CMakeLists.txt
medialib/include/: Database.h  Queue.h  SubsonicClient.h
medialib/include/audio/: AudioPlayer.h  MprisServer.h
medialib/include/client/: IClient.h  OpenSubsonicClient.h  SubsonicClient.h
medialib/include/types/: Album.h  Artist.h  Playlist.h  Song.h
medialib/include/utility/: String.h
medialib/src/: Database.cpp  Queue.cpp  SubsonicClient.cpp
medialib/src/audio/: AudioPlayer.cpp  MprisServer.cpp
medialib/src/client/: OpenSubsonicClient.cpp  SubsonicClient.cpp
welle/: CMakeLists.txt
welle/include/audio/: AudioPlayer.h
welle/include/model/: PlayingSongModel.h  PlaylistListModel.h  QueueListModel.h  SongListModel.h  SongModel.h
welle/include/utility/: Qt.h
welle/qml/: Main.qml
welle/qml/components/: BottomBar.qml  Content.qml  QueueList.qml  Sidebar.qml  SidebarEntry.qml  SongList.qml
welle/qml/pages/: SongList.qml  Songs.qml
welle/src/: main.cpp
welle/src/audio/: AudioPlayer.cpp
welle/src/model/: PlayingSongModel.cpp  PlaylistListModel.cpp  QueueListModel.cpp  SongListModel.cpp  SongModel.cpp
